[package]
name = "analytics-system"
version = "0.0.0"
edition = "2021"
default-run = "analytics-system"

build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.0"
axum = "0.7.9"
capnp = "0.20"
capnp-rpc = "0.20"

[build-dependencies]
capnpc = "0.20"